<resources>
    <string name="app_name">Banco_Blasco_Alejandro</string>
    <string name="usuario">Introduce el DNI</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasenya">Introduce la contraseña</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_entrar">Entrar</string>
    <string name="avatar">Icono de avatar</string>
    <string name="bienvenida">Bienvenido/a</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="bienvenido_a_mi_banco">Bienvenido/a a mi banco</string>
    <string name="posicion_global">Posición Global</string>
    <string name="movimientos">Movimientos</string>
    <string name="transferencias">Transferencias</string>
    <string name="cambiar_contrasenya">Cambiar Contraseña</string>
    <string name="promociones">Promociones</string>
    <string name="cajeros">Cajeros</string>
    <string name="cambiar">Cambiar</string>
    <string name="cancelar">Cancelar</string>
    <string name="repite_la_contrasenya">Repite la contraseña</string>
    <string name="elige_tu_cuenta">Elige tu cuenta:</string>
    <string name="cuenta_propia">Cuenta propia</string>
    <string name="cuenta_ajena">Cuenta ajena</string>
    <string name="escribe_el_num_cuenta">Escribe el núm. cuenta ajena</string>
    <string name="cantidad">Cantidad:</string>
    <string name="enviar_justificante">Enviar justificante</string>
    <string name="enviar">Enviar</string>
    <string name="cuentas">Cuentas</string>
    <string name="cuentasPosicion">Cuentas:</string>
    <string name="ultimos_movimientos">Últimos movimientos:</string>
    <string name="seleccionar_cuenta">Selecciona la cuenta:</string>
    <string name="ajustes">Ajustes\n</string>
    <string name="open_nav">open\\n</string>
    <string name="close_nav">close\n</string>
    <string name="mi_banco">Mi banco\n</string>
    <string name="contacto_gmail_com">contacto\n</string>
    <string name="idioma">Idioma\n</string>
    <string name="multimedia">Multimedia</string>
    <string name="musicaOff">No escuchar la música mientras se ejecuta la aplicación</string>
    <string name="musicaOn">Escuchar la música mientras se ejecuta la aplicación.\n</string>
    <string name="videoBienvenida">Video de bienvenida</string>
    <string name="videoOn">Escuchar reproducir el vídeo al iniciar la aplicación</string>
    <string name="videoOff">No escuchar reproducir el vídeo al iniciar la aplicación</string>
    <string name="idiomaApp">Idioma de la aplicación</string>
    <string name="seleccionaIdioma">Indica el idioma de la aplicación</string>
    <string name="datos">Datos</string>
    <string name="origenDatos">Origen de los datos</string>
    <string name="seleccionaOrigen">Indica el origen de los datos</string>
    <string name="musica">Música\n</string>
    <string name="lista_de_cajeros">Lista de cajeros</string>
    <string name="anyadir_cajeros">Añadir cajeros</string>
    <string name="mapa_de_cajeros">Mapa de cajeros</string>
    <string name="elige_el_cajero">Elige el cajero:</string>
    <string name="direccion">Dirección</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelarM">CANCELAR</string>
    <string name="borrar">Borrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar_cajero">Borrar cajero</string>
    <string name="confirmacion_eliminar_este_cajero">¿Estás seguro de que quieres eliminar este cajero?</string>
    <string name="gestionar_cajeros">Gestionar cajeros</string>

    <string-array name="cuentas">
        <item> </item>
        <item>ES10–1234–5678–90–1234567890</item>
        <item>ES10–3456–5678–90–1234567890</item>
        <item>ES10–4567–5678–90–1234567890</item>
        <item>ES10–5678–5678–90–1234567890</item>
    </string-array>

    <string-array name="divisas">
        <item>€</item>
        <item>$</item>
        <item>£</item>
    </string-array>

    <string-array name="idioma">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>

    <string-array name="codigoidioma">
        <item>es</item>
        <item>en</item>
    </string-array>

    <string-array name="datos">
        <item>Datos locales</item>
        <item>Servicio Web</item>
    </string-array>

    <string-array name="datosvalues">
        <item>locales</item>
        <item>web</item>
    </string-array>


</resources>