<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/multimedia"
        app:icon="@drawable/ic_multimedia">

        <SwitchPreferenceCompat
            app:key="reproducirMusica"
            app:summaryOff="@string/musicaOff"
            app:summaryOn="@string/musicaOn"
            app:title="@string/musica" />

        <SwitchPreferenceCompat
            app:key="reproducirVideo"
            app:summaryOff="@string/videoOff"
            app:summaryOn="@string/videoOn"
            app:title="@string/videoBienvenida" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/idioma"
        app:icon="@drawable/ic_idioma">

        <ListPreference
            app:key="pais"
            app:title="@string/idiomaApp"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/seleccionaIdioma"
            app:entries="@array/idioma"
            app:entryValues="@array/codigoidioma"
            app:defaultValue="es" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/datos"
        app:icon="@drawable/ic_datos">

        <ListPreference
            app:key="datos"
            app:title="@string/origenDatos"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/seleccionaOrigen"
            app:entries="@array/datos"
            app:entryValues="@array/datosvalues"
            app:defaultValue="locales" />

    </PreferenceCategory>

</PreferenceScreen>
