<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.AtmFormActivity"
    android:id="@+id/main">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Visualizar ATM"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestionar_cajeros"
            android:textSize="24sp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Carrer del Clariano, 1111, 46021 Valencia"
            android:focusable="false"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <!-- Campo de Latitud -->
        <TextView
            android:id="@+id/tvLatitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitud"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="39.476"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:layout_marginBottom="16dp" />

        <!-- Campo de Longitud -->
        <TextView
            android:id="@+id/tvLongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitud"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="-0.352448"
            android:inputType="numberDecimal"
            android:padding="8dp"
            android:layout_marginBottom="24dp" />

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guardar"
                android:backgroundTint="@color/green"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelarM"
                android:backgroundTint="@color/green"
                android:textColor="@color/white"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
