<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MovementsActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/posicion_global"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/tvSubtituloCuentas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_cuenta"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        />

    <Spinner
        android:id="@+id/spCuentas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/tvSubtituloMoviemientos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ultimos_movimientos"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovimientos"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>