<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/cvBienvenida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_anchorGravity="top">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/avatar_icon"
                        android:contentDescription="@string/avatar"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="50dp">

                        <TextView
                            android:id="@+id/idTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="20sp"
                            android:textColor="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:elevation="4dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnPosicionGlobal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/posicion_global"
                            app:icon="@drawable/ic_posicion"
                            android:layout_marginBottom="12dp"
                            style="@style/Theme.EstiloPrincipal.Botones"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnMovimientos"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/movimientos"
                            android:layout_marginBottom="12dp"
                            app:icon="@drawable/ic_movimientos"
                            style="@style/Theme.EstiloPrincipal.Botones"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnTransferencias"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/transferencias"
                            android:layout_marginBottom="12dp"
                            app:icon="@drawable/ic_transferencias"
                            style="@style/Theme.EstiloPrincipal.Botones"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCambiarContrasenya"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cambiar_contrasenya"
                            android:layout_marginBottom="12dp"
                            app:icon="@drawable/ic_cambiar_pass"
                            style="@style/Theme.EstiloPrincipal.Botones"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnPromociones"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/promociones"
                            android:layout_marginBottom="12dp"
                            app:icon="@drawable/ic_promociones"
                            style="@style/Theme.EstiloPrincipal.Botones"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCajeros"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cajeros"
                            android:layout_marginBottom="12dp"
                            app:icon="@drawable/ic_cajeros"
                            style="@style/Theme.EstiloPrincipal.Botones"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnSalir"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/btn_salir"
                            android:layout_marginBottom="12dp"
                            app:icon="@drawable/ic_salir"
                            style="@style/Theme.EstiloPrincipal.Botones"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


    </LinearLayout>



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bank_icon"
                app:backgroundTint="#AA9999B4"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="50dp"/>


            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:fabCradleMargin="10dp"
                app:fabCradleRoundedCornerRadius="20dp"
                app:fabCradleVerticalOffset="10dp"
                style="@style/Theme.EstiloPrincipal.BottomActionBar">


            </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_navigation_drawer"
        app:headerLayout="@layout/drawer_header" />







</androidx.drawerlayout.widget.DrawerLayout>


